--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-reflection-board",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^1.3.0",
     "axios": "^0.17.1",
+    "express": "^4.16.3",
     "pg": "^7.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
